@@ -3,6 +3,7 @@ Changes for 3.2.8rc1
 New features:
 
 Bug fixes:
+...G...PS. [ZBX-12195] fixed contamination of script output with Zabbix'es own log messages when logging level is set to 4 or 5 and LogType=console (gleb)
 ...G...... [ZBX-12270] fixed processing of AIX item 'system.stat[ent]' in agent; thanks to Marc for patch (Andris)
 ..F....... [ZBX-12277] fixed trigger expression test form incorrectly replacing macros (Ivo)
 
@@ -456,6 +457,7 @@ Changes for 3.0.11rc1
 New features:
 
 Bug fixes:
+...G...PS. [ZBX-12195] fixed contamination of script output with Zabbix'es own log messages when logging level is set to 4 or 5 and LogType=console (gleb)
 ...G...... [ZBX-12270] fixed processing of AIX item 'system.stat[ent]' in agent; thanks to Marc for patch (Andris)
 ..F....... [ZBX-12277] fixed trigger expression test form incorrectly replacing macros (Ivo)
 
